--- a/apps/loki.yml
+++ b/apps/loki.yml
@@ -9,9 +9,10 @@ spec:
     name: ''
     namespace: monitoring
     server: 'https://kubernetes.default.svc'
-  # syncPolicy:
-  #   syncOptions:
-  #   - Replace=true
+  syncPolicy:
+    syncOptions:
+    # - Replace=true
+    - CreateNamespace=true 
   source:
     path: umbrella-chart
     repoURL: 'https://github.com/aakashvishwakarma/Argo-apps-of-app'
